projects/giri-cost/namespacenetworkpolicyrules/artifacts/git-cilium-test-xwing-block.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: git-cilium-test-xwing-block
spec:
  endpointSelector:
    matchLabels:
      org: empire
      class: deathstar
  ingress:
  - fromEndpoints:
    - matchLabels:
        org: empire
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
